MirrorJs/ mjs can now read multi line variables

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body id="body" class="bg-secondary">
    
-   @var $phone = samsung; $model = $phone;
+   @var $phone = 'samsung'; $model = A10; $company = 'SAMSUNG';
 
    @vars
       $name = "Ebuka";
