--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    @var $phone = 'samsung'; $model = A10; $company = "Apple";
    @var $phone = "Apple";
    @var $phones = ['Apple', 'Samsung', 'Tecno', 'Huawei'];
-   @var $company = {name: 'Apple', country: 'USA', employees: 50000, founders: 'Steve Job & Steve Wozniak'}
+   @var $company = {name: 'Apple', country: 'USA', employees: 50000, founders: 'Steve  Job'};
    @var $con$tant = $company;
 
    @vars
