a big milestone has been crossed, strings representing objects and array can now be converted to actual arrays and objects

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
    
    @var $phone = 'samsung'; $model = A10; $company = "Apple";
    @var $phone = "Apple";
-   @var $phones = ['Apple', 'Samsung', 'Tecno', 'Huawei'];
-   @var $company = {name: 'Apple', country: 'USA', employees: 50000, founders: 'Steve  Job'};
+   @var $phones = ["Apple", "Samsung", "Tecno", "Huawei"];
+   @var $company = {"name": "Apple", "country": "USA", "employees": 50000, "founders": "Steve  Job"};
    @var $con$tant = $company;
 
    @vars
