--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>So Far with Mirror.Js</title>
    <link rel="stylesheet" href="assets/bootstrap.css">
    <script src="assets/mirror.js"></script>
-   <script src="assets/sofar.js"></script>
+   <script src="assets/main.js"></script>
 </head>
 <body id="body">
    
@@ -73,6 +73,25 @@
             Hello {{ $name }}
          </p>
          @endfor
+      </div>
+
+      <div class="my-2 rounded border p-3">
+         <h5>Directive Nesting</h5>
+         @for ($odini in $odinis)
+            @if ($name == "Anabelle")
+            <p>
+               Hello {{ $name }}
+            </p>
+            @endif
+         @endfor
+      </div>
+
+      <div class="my-2 rounded border p-3">
+         <h5>Coming Soon...</h5>
+         <p>Data Modelling</p>
+         <p>State Management</p>
+         <p>Single Paged Applications & Routing</p>
+         <p>:)</p>
       </div>
       
 
